--- a/style/component/activity-cards.css
+++ b/style/component/activity-cards.css
@@ -1,9 +1,9 @@
 /* pink purple activity card */
 /* 行間距 */
-.activity .row:nth-of-type(-n+2){
+/* .activity .col-4:nth-of-type(-n+3){
     display: flex;
     margin-bottom: 50px;
-}
+} */
 
 /* activity mask */
 .activity .card-mask{
@@ -77,16 +77,20 @@
     transition: .3s;
 }
 
-.outer-frame.activity .row:nth-of-type(-n+2){
+/* .outer-frame.activity .row:nth-of-type(-n+2){
     display: flex;
     margin-bottom: 50px;
-}
+} */
 .activity .card{
     border: 1px solid var(--color-neutral-500);
     border-radius: 20px;
     padding: 10px;
+    margin-top: 40px;
     position: relative;
     background-color: var(--color-white);
+}
+.activity.activity-page .card:last-child{
+    margin-bottom: 20px;
 }
 .activity a{
     text-decoration: none;
@@ -98,8 +102,8 @@
 }
 .activity .card .tag{
     position: absolute;
-    top: 20px;
-    left: 20px;
+    top: 10px;
+    left: 10px;
     background-color: var(--color-white);
     padding: 0px 10px;
     border-radius: 20px;
@@ -131,7 +135,7 @@
     margin-bottom: 20px;
 }
 .activity .card .detail .title{
-    margin: -10PX 0 6px 0;
+    margin: 0 0 6px 0;
 }
 .activity .card .detail{
     margin-bottom: 50px;
@@ -171,4 +175,9 @@
 .activity .card.purple:hover{
     border: 1px solid var(--color-secondary-purple-700);
     background-color: var(--color-secondary-purple-100);
+}
+@media screen and (max-width: 440px){
+    /* .activity .col-4:nth-of-type(-n+5){
+        margin-bottom: 50px;
+    } */
 }
