--- a/style/page/activity.css
+++ b/style/page/activity.css
@@ -1,5 +1,6 @@
 .activity-page{
     position: relative;
+    overflow: hidden;
 }
 .activity .activity-bg2{
     position: absolute;
@@ -7,11 +8,34 @@
     bottom: -50px;
     z-index: -1;
 }
-.activity.activity-page .col-4:nth-child(-n+3){
-    margin-bottom: 60px;
+.activity-page .activity-bg{
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -1;
+}
+@media screen and (max-width: 1440px){
+    .activity-page .activity-bg{
+        left: -240px;
+    }
+}
+@media screen and (max-width: 1200px){
+    .activity-page .activity-bg{
+        left: -360px;
+    }
+}
+@media screen and (max-width: 1024px){
+    .activity-page .activity-bg{
+        left: -448px;
+    }
+}
+@media screen and (max-width: 810px){
+    .activity-page .activity-bg{
+        left: -555px;
+    }
 }
 @media screen and (max-width: 440px){
-    .activity.activity-page .col-4:nth-child(-n+5){
-        margin-bottom: 60px;
+    .activity-page .activity-bg{
+        left: -740px;
     }
 }
