--- a/style/page/tour-guide-page.css
+++ b/style/page/tour-guide-page.css
@@ -2,12 +2,12 @@
 .label .row{
     display: flex;
     padding: 0 10px;
-    gap: 20px;
+    gap: 10px;
 }
 
 .label-btn{
-    width: 160px;
-    height: 160px;
+    width: 140px;
+    height: 140px;
     border-radius: 80px;
 
     display: flex;
@@ -24,8 +24,8 @@
     font-size: 2.5rem;
 }
 .label-btn.active{
-    width: 315px;
-    height: 160px;
+    width: 280px;
+    height: 140px;
     border-radius: 80px;
     font-family: var(--font-main);
     line-height: var(--line-height-base);
@@ -40,8 +40,8 @@
     height: 12px;
     border-radius: 12px 12px 0 0;
     position: absolute;
-    bottom: -62px;
-    left: 145.5px;
+    bottom: -37px;
+    left: 128px;
 }
 
 /* label pink */
@@ -161,21 +161,21 @@
 .outer-frame.good-books .row:nth-of-type(-n+2){
     display: flex;
 }
-.outer-frame.student-activity .row:nth-of-type(-n+2){
+/* .outer-frame.student-activity .row:nth-of-type(-n+2){
     display: flex;
     margin-bottom: 50px;
-}
+} */
 .outer-frame .row:nth-of-type(4){
     justify-content: end;
 }
 .outer-frame .page-btn{
     display: flex;
     justify-content: end;
-    margin: 30px 0 10px;
+    margin: 50px 0 0 0;
 }
 .label{
     position: relative;
-    padding-bottom: 60px;
+    padding: 40px 0 35px 0;
     overflow: hidden;
 }
 .tour-guide-pink-bg,
@@ -186,18 +186,18 @@
     left: 0;
     z-index: -1;
 }
-.title-area.pink,
+/* .title-area.pink,
 .title-area.orange,
 .title-area.purple{
     padding-bottom: 41.2px;
-}
+} */
 
 /* pink purple reading card */
 /* 行間距 */
-.outer-frame.reading .row:nth-of-type(-n+2){
+/* .outer-frame.reading .row:nth-of-type(-n+2){
     display: flex;
     margin-bottom: 50px;
-}
+} */
 .reading a{
     text-decoration: none;
 }
@@ -206,6 +206,8 @@
     padding: 10px;
     border-radius: 20px;
     position: relative;
+    /* height: 100%; */
+    margin-top: 40px;
 }
 
 .reading .card img{
@@ -223,7 +225,6 @@
 .reading .card .title.purple:hover{
     color: var(--color-secondary-purple-700);
 }
-
 /* mask */
 .reading .card-mask{
     display: block;
@@ -311,11 +312,11 @@
     border-radius: 20px;
     display: flex;
     padding: 24px;
-    height:100%;
+    margin-top: 40px;
 }
 .kid-learning .card img{
     border-radius: 12px;
-    margin-right: 24px;;
+    margin-right: 24px;
 }
 .kid-learning a{
     text-decoration: none;
@@ -327,6 +328,7 @@
     display: flex;
     flex-direction: column;
     margin: auto;
+    
 }
 .kid-learning .card:hover{
     border: 1px solid var(--color-secondary-pink-700);
@@ -335,10 +337,10 @@
 }
 /* pink learning card */
 /* 行間距 */
-.outer-frame.kid-learning .row:nth-of-type(-n+4){
+/* .outer-frame.kid-learning .row:nth-of-type(-n+4){
     display: flex;
     margin-bottom: 30px;
-}
+} */
 
 /* orange advanced-course */
 .star .fa-star{
@@ -350,15 +352,16 @@
 
 /* orange paper card */
 /* 行間距 */
-.outer-frame.paper .row:nth-of-type(-n+3){
+/* .outer-frame.paper .row:nth-of-type(-n+3){
     display: flex;
     margin-bottom: 50px;
-}
+} */
 .paper .card{
     border: 1px solid var(--color-neutral-500);
     background-color: var(--color-white);
     border-radius: 20px;
     padding: 36px;
+    margin-top: 40px;
     cursor: pointer;
 }
 .paper .card:hover{
@@ -383,24 +386,24 @@
 }
 .paper .card .statistics{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     margin-top: 30px;
+}
+.paper .card .statistics ul{
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
 }
 .paper .card .statistics .stat-item{
     display: flex;
     flex-direction: column;
     text-align: center;
-    padding: 0 32px 0 0;
-    flex-grow: 0;
-    flex-shrink: 0;
 }
 .paper .card .statistics a{
-    flex-grow: 0; 
-    flex-shrink: 1;
     text-decoration: none;
     display: inline-flex;
-    justify-content: end;
-    align-items: center;
+    margin-top: 20px;
     color: var(--color-secondary-orange-700);
 }
 .paper .card .statistics a span{
@@ -419,7 +422,6 @@
     display: block;
     width: 100%;
 }
-
 .financial .card{
     position: relative;
     border-radius: 20px;
@@ -460,9 +462,14 @@
     list-style-position: inside;
     display: flex;
     flex-direction: column;
+    margin-bottom: 30px;
+}
+.financial .btn-mid{
+    margin-bottom: 0;
 }
 .financial li {
-    margin-bottom: 12px; 
+    margin-bottom: 12px;
+    list-style: none; 
 }
 .financial li a{
     text-decoration: none;
@@ -472,7 +479,7 @@
 }
 
 .recommend-list .title{
-    margin:50px 0 20px 0;
+    margin:0 0 20px 0;
 }
 .recommend-list ul{
     list-style: none;
@@ -497,7 +504,9 @@
 .recommend-list li:hover a{
     text-decoration: none;
 }
-
+.scroll-box{
+    overflow-x: auto;
+}
 .medical .card{
     border: 1px solid var(--color-neutral-500);
     border-radius: 20px;
@@ -514,7 +523,9 @@
     flex-direction: column;
     justify-content: center;
     width: 100%;
-
+}
+.medical .card .detail p:nth-child(3){
+    margin-bottom: 20px;
 }
 .medical .card .detail h5{
     color: var(--color-secondary-purple-700);
@@ -528,9 +539,9 @@
 .medical .card:hover span{
     background-color: var(--color-white);
 }
-.medical .card .tag span{
+/* .medical .card .tag span{
     margin-top: 24px;
-}
+} */
 .medical ul{
     margin-top: 20px;
     border: 1px solid var(--color-neutral-500);
@@ -551,18 +562,44 @@
 .medical ul li:last-child{
     border-bottom: none;
 }
+.tour-guide-pink-bg-w810,
+.tour-guide-orange-bg-w810,
+.tour-guide-purple-bg-w810,
+.tour-guide-pink-bg-w440,
+.tour-guide-orange-bg-w440,
+.tour-guide-purple-bg-w440{
+    display: none;
+}
+
 @media screen and (max-width: 1440px){
     .pink .tour-guide-pink-bg,
-    .tour-guide-pink-bg{
+    .tour-guide-pink-bg,
+    .orange .tour-guide-orange-bg,
+    .tour-guide-orange-bg,
+    .purple .tour-guide-purple-bg,
+    .tour-guide-purple-bg{
         left: -240px;
     }
     .outer-frame{
         width: 95%;
     }
 }
+
 @media screen and (max-width: 1024px){
     .outer-frame{
         width: 95%;
+    }
+    .content-wrapper .outer-frame{
+        padding: 30px;
+    }
+    .paper .card .statistics ul{
+        width: 100%;
+        justify-content: space-between;
+        gap: 0;
+    }
+    .paper .card .statistics a{
+        width: 100%;
+        justify-content: flex-end;
     }
 }
 @media screen and (max-width: 810px){
@@ -582,30 +619,51 @@
     }
     .label .row{
         display: flex;
-        gap: 10px;
+        gap: 16px;
         padding: 0 10px;
     }
     .label-btn.active{
-        width: 230px;
+        width: 200px;
     }
     .label-btn.active::after{
         bottom: -32px;
-        left: 103px;
+        left: 88px;
     }
     .content-wrapper .outer-frame{
         padding: 30px 20px
+    }
+    .kid-learning .card img{
+        width: 140px;
+        height: 140px;
+        margin-right: 20px;
+    }
+    .kid-learning .card{
+        padding: 20px;
+    }
+    .tour-guide-pink-bg-w810,
+    .tour-guide-orange-bg-w810,
+    .tour-guide-purple-bg-w810{
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 0;
+        z-index: -1;
     }
 }
 @media screen and (max-width: 440px){
     .good-books img{
         width: 90%;
     }
+    .label{
+        padding: 0 0 30px 0;
+    }
     .label .row{
+        justify-content: space-between;
         align-items: space-between;
     }
     .label-btn,
     .label-btn.active{
-        width: 48%;
+        width: calc(50% - 8px);
         height: 100px;
         
     }
@@ -638,5 +696,42 @@
     }
     .content-wrapper{
         padding-bottom: 60px;
+    }
+    .kid-learning .card img{
+        width: 100%;
+        height: auto;
+        margin: 0 0 16px 0;
+    }
+    .kid-learning .card{
+        padding: 16px;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    
+    .financial .card-mask{
+    padding: 16px;
+}
+    .medical .card{
+        flex-direction: column;
+    }
+    .medical .card img{
+        width: 100%;
+        height: auto;
+        margin: 0 0 16px 0;
+    }
+    .tour-guide-pink-bg-w810,
+    .tour-guide-orange-bg-w810,
+    .tour-guide-purple-bg-w810{
+        display: none;
+    }
+    .tour-guide-pink-bg-w440,
+    .tour-guide-orange-bg-w440,
+    .tour-guide-purple-bg-w440{
+        display: block;
+        position: absolute;
+        top: -100px;
+        right: 0;
+        z-index: -1;
     }
 }
