--- a/style/layout/words.css
+++ b/style/layout/words.css
@@ -1,5 +1,6 @@
 .books-list p.bookname,
-.kid-learning .card .detail p:last-child{
+.kid-learning .card .content .detail p:last-child,
+.activity .card .text-area p:last-child{
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 2;
@@ -8,7 +9,8 @@
 }
 .hot-activity .card .detail .content p,
 .activity .card .detail .title,
-.medical .card .detail h5{
+.medical .card .detail h5,
+.paper .card .title h5{
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 1;
