--- a/style/component/button.css
+++ b/style/component/button.css
@@ -239,7 +239,7 @@
 
 /* 小按鈕 */
 .little-btn{
-    padding: 0 24px;
+    padding: 0 20px;
     line-height: 45px;
     text-decoration: none;
     border-radius: 30px;
@@ -321,4 +321,15 @@ select{
     top: 50%;
     transform: translateY(-50%);
     cursor: pointer;
+}
+@media screen and (max-width: 440px){
+    .big-btn.light.pink:hover span{
+        transform: translateX(0px);
+    }
+    .big-btn.light.orange:hover span{
+        transform: translateX(0px);
+    }
+    .big-btn.light:hover span{
+        transform: translateX(0px);
+    }
 }
