--- a/style/component/nav-bar.css
+++ b/style/component/nav-bar.css
@@ -1,3 +1,9 @@
+.open-fixed{
+    position: fixed;
+    overflow: hidden;
+    width: 100%;
+    height: 100vh;
+}
 .nav-bar{
     position: fixed;
     top: 0;
