--- a/style/style.css
+++ b/style/style.css
@@ -71,6 +71,7 @@
     width: 100%;
     border-radius: 40px;
     border: 1px solid var(--color-neutral-500);
+    background-color: var(--color-white);
     overflow: hidden;
     display: flex;
     margin: 0 auto;
@@ -595,22 +596,13 @@
 .text-overlay p{
     margin-bottom: 30px;
 }
+
 .best-moments .swiper-wrapper{
-    display: flex;
-    justify-content: end;
-    z-index: 2;
-    font-size: 0;
-    width: 100%;
     transition-timing-function: linear;
-}
-.best-moments .swiper-wrapper img{
-    border: 1px solid var(--color-white);
 }
 .best-moments .swiper{
     position: absolute;
     bottom: 0;
-    left: 0;
-    right: 0;
 }
 .best-moments .bg{
     position: absolute;
@@ -625,11 +617,9 @@
 .best-moments-swiper .swiper-slide{
     width: auto;
     height: 140px;
-
 }
 .best-moments-swiper .swiper-slide img{
     height: 100%;
-    width: auto;
 }
 
 
@@ -664,13 +654,14 @@
     background-color: var(--color-white);
 }
 .tour-guide .modal-content{
-    width: 1240px;
-    height: 650px;
-    padding: 70px 128px;
+    width: 1024px;
+    height: 600px;
+    padding: 50px;
     display: flex;
     flex-direction: column;
     text-align: center;
     position: relative;
+    overflow: hidden;
 }
 .tour-guide .modal-content p{
     margin-bottom: 30px;
@@ -844,6 +835,9 @@ input:focus{
     .best-moments .bg{
         left: -360px;
     }
+    .modal-overlay{
+        display: none;
+    }
 }
 @media screen and (max-width: 1024px){
     .tour-guide img,
@@ -856,6 +850,12 @@ input:focus{
     .newbooks .col-12{
         justify-content: center;
     }
+    .title-area.pink .text-overlay,
+    .title-area.orange .text-overlay,
+    .title-area.purple .text-overlay{
+        display: none;
+    }
+    
 }
 @media screen and (max-width: 810px){
     .search-box{
@@ -1069,6 +1069,7 @@ input:focus{
         display: flex;
         align-items: center;
         gap: 6px;
+        margin-top: 6px;
     }
     .hot-activity .card .day2 span{
         color: var(--color-accent-green-700);
